# drf-spectacular-test

./: README.md  manage.py  pyproject.toml
apps/posts/: models.py  schemas.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/auth/: token.py
core/config/: base.py
core/gateway/: asgi.py  wsgi.py
core/routes/: urls.py
